[package]
name = "n_longest_paths"
version = "0.1.0"
authors = ["Allard Hendriksen <allard@allardhendriksen.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
npy = "0.4"
npy-derive = "0.4"
structopt = "0.3.13"
pbr = "1.0"
